[project]
name = "databits"
version = "0.1.0"
description = "This is really just to make it easier for an IDE w/ LSP"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.3.2",
    "getdaft[deltalake]>=0.4.18",
    "polars>=1.30.0",
    "pyarrow>=20.0.0",
    "pyspark>=4.0.0",
    "tabulate>=0.9.0",
]
